--- a/package.json
+++ b/package.json
@@ -1,7 +1,31 @@
 {
   "name": "resume-visualizations",
   "version": "0.1.0",
+  "description": "A project for visualizing resumes",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sbecker11/resume-visualizations.git"
+  },
+  "author": "Shawn Becker",
+  "license": "MIT",
   "private": true,
+  "keywords": [
+    "resume",
+    "visualization",
+    "react",
+    "data visualization",
+    "data-visualization"
+  ],
+  "scripts": {
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint src/**/*.{js,jsx}",
+    "lint:fix": "eslint src/**/*.{js,jsx} --fix",
+    "format": "prettier --write src/**/*.{js,jsx,json,css,md}"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -9,15 +33,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.12.7",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
