--- a/package.json
+++ b/package.json
@@ -27,15 +27,17 @@
     "format": "prettier --write src/**/*.{js,jsx,json,css,md}"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-draggable": "^4.4.6",
-    "react-scripts": "^5.0.1",
-    "recharts": "^2.12.7",
-    "web-vitals": "^2.1.4"
+    "lodash": "^4.17.21",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "^5.0.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
+    "prettier": "^2.0.0"
   },
   "eslintConfig": {
     "extends": [
