--- a/package.json
+++ b/package.json
@@ -27,15 +27,13 @@
     "format": "prettier --write src/**/*.{js,jsx,json,css,md}"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0",
-    "lodash": "^4.17.21",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
     "prettier": "^2.0.0"
   },
