--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "web-vitals": "^4.2.3"
   },
   "devDependencies": {
+    "react-devtools":"~5.3.1",
     "globals": "^15.9.0",
     "prettier": "^2.0.0"
   },
